{
  "version": 4,
  "terraform_version": "1.12.2",
  "serial": 552,
  "lineage": "5a6f6892-eded-89e5-b8ef-498613310380",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-west-2:779066052352:loadbalancer/app/microservices-platform-prod-alb/47e6b9c43f79e1f3",
            "arn_suffix": "app/microservices-platform-prod-alb/47e6b9c43f79e1f3",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "microservices-platform-prod-alb-2067860214.us-west-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": true,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-west-2:779066052352:loadbalancer/app/microservices-platform-prod-alb/47e6b9c43f79e1f3",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "microservices-platform-prod-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0f5ea80145cb89613"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-05fdc5136a74f0743"
              },
              {
                "subnet_id": "subnet-0669213a6401babfe"
              },
              {
                "subnet_id": "subnet-0d6bdc16846343c96"
              }
            ],
            "subnets": [
              "subnet-05fdc5136a74f0743",
              "subnet-0669213a6401babfe",
              "subnet-0d6bdc16846343c96"
            ],
            "tags": {
              "CostCenter": "engineering",
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Owner": "devops-team",
              "Project": "microservices-platform"
            },
            "tags_all": {
              "CostCenter": "engineering",
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Owner": "devops-team",
              "Project": "microservices-platform"
            },
            "vpc_id": "vpc-0512827eff5283536",
            "xff_header_processing_mode": "append",
            "zone_id": "Z1H1FL5HABSF5"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.alb_sg",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:779066052352:security-group/sg-0f5ea80145cb89613",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f5ea80145cb89613",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "microservices-platform-prod-alb-sg20250801144718737200000015",
            "name_prefix": "microservices-platform-prod-alb-sg",
            "owner_id": "779066052352",
            "revoke_rules_on_delete": false,
            "tags": {
              "CostCenter": "engineering",
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "microservices-platform-prod-alb-sg",
              "Owner": "devops-team",
              "Project": "microservices-platform"
            },
            "tags_all": {
              "CostCenter": "engineering",
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "microservices-platform-prod-alb-sg",
              "Owner": "devops-team",
              "Project": "microservices-platform"
            },
            "timeouts": null,
            "vpc_id": "vpc-0512827eff5283536"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "eks_cluster_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:779066052352:security-group/sg-0e0215222ffeb7700",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e0215222ffeb7700",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "microservices-platform-prod-cluster-sg20250801153938481600000001",
            "name_prefix": "microservices-platform-prod-cluster-sg",
            "owner_id": "779066052352",
            "revoke_rules_on_delete": false,
            "tags": {
              "CostCenter": "engineering",
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "microservices-platform-prod-cluster-sg",
              "Owner": "devops-team",
              "Project": "microservices-platform"
            },
            "tags_all": {
              "CostCenter": "engineering",
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "microservices-platform-prod-cluster-sg",
              "Owner": "devops-team",
              "Project": "microservices-platform"
            },
            "timeouts": null,
            "vpc_id": "vpc-0512827eff5283536"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:779066052352:security-group/sg-044f2759a0d98c0db",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-044f2759a0d98c0db",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "PostgreSQL",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0e0215222ffeb7700"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "microservices-platform-prod-rds-sg2025080115394449040000000f",
            "name_prefix": "microservices-platform-prod-rds-sg",
            "owner_id": "779066052352",
            "revoke_rules_on_delete": false,
            "tags": {
              "CostCenter": "engineering",
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "microservices-platform-prod-rds-sg",
              "Owner": "devops-team",
              "Project": "microservices-platform"
            },
            "tags_all": {
              "CostCenter": "engineering",
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "microservices-platform-prod-rds-sg",
              "Owner": "devops-team",
              "Project": "microservices-platform"
            },
            "timeouts": null,
            "vpc_id": "vpc-0512827eff5283536"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.eks_cluster_sg",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "redis_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:779066052352:security-group/sg-0c908c58d3d77b4e3",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0c908c58d3d77b4e3",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Redis",
                "from_port": 6379,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0e0215222ffeb7700"
                ],
                "self": false,
                "to_port": 6379
              }
            ],
            "name": "microservices-platform-prod-redis-sg2025080115394444990000000e",
            "name_prefix": "microservices-platform-prod-redis-sg",
            "owner_id": "779066052352",
            "revoke_rules_on_delete": false,
            "tags": {
              "CostCenter": "engineering",
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "microservices-platform-prod-redis-sg",
              "Owner": "devops-team",
              "Project": "microservices-platform"
            },
            "tags_all": {
              "CostCenter": "engineering",
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "microservices-platform-prod-redis-sg",
              "Owner": "devops-team",
              "Project": "microservices-platform"
            },
            "timeouts": null,
            "vpc_id": "vpc-0512827eff5283536"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.eks_cluster_sg",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:779066052352:security-group/sg-097075357ad468533",
            "description": "EKS cluster security group",
            "egress": [],
            "id": "sg-097075357ad468533",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Node groups to cluster API",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0f0e3150aeb0439eb"
                ],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "microservices-platform-prod-cluster-20250801153940849300000007",
            "name_prefix": "microservices-platform-prod-cluster-",
            "owner_id": "779066052352",
            "revoke_rules_on_delete": false,
            "tags": {
              "CostCenter": "engineering",
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "microservices-platform-prod-cluster",
              "Owner": "devops-team",
              "Project": "microservices-platform"
            },
            "tags_all": {
              "CostCenter": "engineering",
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "microservices-platform-prod-cluster",
              "Owner": "devops-team",
              "Project": "microservices-platform"
            },
            "timeouts": null,
            "vpc_id": "vpc-0512827eff5283536"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:779066052352:security-group/sg-0f0e3150aeb0439eb",
            "description": "EKS node shared security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all egress",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f0e3150aeb0439eb",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Cluster API to node 4443/tcp webhook",
                "from_port": 4443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-097075357ad468533"
                ],
                "self": false,
                "to_port": 4443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node 6443/tcp webhook",
                "from_port": 6443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-097075357ad468533"
                ],
                "self": false,
                "to_port": 6443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node 8443/tcp webhook",
                "from_port": 8443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-097075357ad468533"
                ],
                "self": false,
                "to_port": 8443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node 9443/tcp webhook",
                "from_port": 9443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-097075357ad468533"
                ],
                "self": false,
                "to_port": 9443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node groups",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-097075357ad468533"
                ],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node kubelets",
                "from_port": 10250,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-097075357ad468533"
                ],
                "self": false,
                "to_port": 10250
              },
              {
                "cidr_blocks": [],
                "description": "Node to node CoreDNS UDP",
                "from_port": 53,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": true,
                "to_port": 53
              },
              {
                "cidr_blocks": [],
                "description": "Node to node CoreDNS",
                "from_port": 53,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 53
              },
              {
                "cidr_blocks": [],
                "description": "Node to node ingress on ephemeral ports",
                "from_port": 1025,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 65535
              }
            ],
            "name": "microservices-platform-prod-node-20250801153940819200000006",
            "name_prefix": "microservices-platform-prod-node-",
            "owner_id": "779066052352",
            "revoke_rules_on_delete": false,
            "tags": {
              "CostCenter": "engineering",
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "microservices-platform-prod-node",
              "Owner": "devops-team",
              "Project": "microservices-platform",
              "kubernetes.io/cluster/microservices-platform-prod": "owned"
            },
            "tags_all": {
              "CostCenter": "engineering",
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "microservices-platform-prod-node",
              "Owner": "devops-team",
              "Project": "microservices-platform",
              "kubernetes.io/cluster/microservices-platform-prod": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-0512827eff5283536"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "ingress_nodes_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node groups to cluster API",
            "from_port": 443,
            "id": "sgrule-3900825497",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-097075357ad468533",
            "security_group_rule_id": "sgr-06e9419e37c6ef9d4",
            "self": false,
            "source_security_group_id": "sg-0f0e3150aeb0439eb",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "egress_all",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow all egress",
            "from_port": 0,
            "id": "sgrule-2779965772",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0f0e3150aeb0439eb",
            "security_group_rule_id": "sgr-0840fdec3c3a05fcc",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node groups",
            "from_port": 443,
            "id": "sgrule-452476273",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0f0e3150aeb0439eb",
            "security_group_rule_id": "sgr-0867e757aa9bc9b71",
            "self": false,
            "source_security_group_id": "sg-097075357ad468533",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_4443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 4443/tcp webhook",
            "from_port": 4443,
            "id": "sgrule-790596584",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0f0e3150aeb0439eb",
            "security_group_rule_id": "sgr-0797053eb1721b88b",
            "self": false,
            "source_security_group_id": "sg-097075357ad468533",
            "timeouts": null,
            "to_port": 4443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_6443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 6443/tcp webhook",
            "from_port": 6443,
            "id": "sgrule-3864915070",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0f0e3150aeb0439eb",
            "security_group_rule_id": "sgr-043b5019a9de977cb",
            "self": false,
            "source_security_group_id": "sg-097075357ad468533",
            "timeouts": null,
            "to_port": 6443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_8443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 8443/tcp webhook",
            "from_port": 8443,
            "id": "sgrule-4110536799",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0f0e3150aeb0439eb",
            "security_group_rule_id": "sgr-0db6b16ee7b32eb96",
            "self": false,
            "source_security_group_id": "sg-097075357ad468533",
            "timeouts": null,
            "to_port": 8443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_9443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 9443/tcp webhook",
            "from_port": 9443,
            "id": "sgrule-2443240340",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0f0e3150aeb0439eb",
            "security_group_rule_id": "sgr-022a1f104c02fdc47",
            "self": false,
            "source_security_group_id": "sg-097075357ad468533",
            "timeouts": null,
            "to_port": 9443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_kubelet",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node kubelets",
            "from_port": 10250,
            "id": "sgrule-385371755",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0f0e3150aeb0439eb",
            "security_group_rule_id": "sgr-0a4ed327ca784865c",
            "self": false,
            "source_security_group_id": "sg-097075357ad468533",
            "timeouts": null,
            "to_port": 10250,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_nodes_ephemeral",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node ingress on ephemeral ports",
            "from_port": 1025,
            "id": "sgrule-1954425282",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0f0e3150aeb0439eb",
            "security_group_rule_id": "sgr-08b1309b11872e179",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_tcp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS",
            "from_port": 53,
            "id": "sgrule-2071185130",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0f0e3150aeb0439eb",
            "security_group_rule_id": "sgr-0c42a9d8c7882c94e",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_udp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS UDP",
            "from_port": 53,
            "id": "sgrule-3744228613",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "udp",
            "security_group_id": "sg-0f0e3150aeb0439eb",
            "security_group_rule_id": "sgr-05287a26824cbfa18",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:779066052352:network-acl/acl-03a4d3c889ebdcf0a",
            "default_network_acl_id": "acl-03a4d3c889ebdcf0a",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-03a4d3c889ebdcf0a",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "779066052352",
            "subnet_ids": [
              "subnet-02002e8156286239c",
              "subnet-02e0492fa12b8f069",
              "subnet-04017d7249bb65c77",
              "subnet-057dd2b1cbad43636",
              "subnet-05fdc5136a74f0743",
              "subnet-0669213a6401babfe",
              "subnet-088ac01412c3a88dc",
              "subnet-0d6bdc16846343c96",
              "subnet-0f671f2cc96bfbb54"
            ],
            "tags": {
              "CostCenter": "engineering",
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "microservices-platform-prod-vpc-default",
              "Owner": "devops-team",
              "Project": "microservices-platform"
            },
            "tags_all": {
              "CostCenter": "engineering",
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "microservices-platform-prod-vpc-default",
              "Owner": "devops-team",
              "Project": "microservices-platform"
            },
            "vpc_id": "vpc-0512827eff5283536"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:779066052352:route-table/rtb-084c472c92b699f8d",
            "default_route_table_id": "rtb-084c472c92b699f8d",
            "id": "rtb-084c472c92b699f8d",
            "owner_id": "779066052352",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "CostCenter": "engineering",
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "microservices-platform-prod-vpc-default",
              "Owner": "devops-team",
              "Project": "microservices-platform"
            },
            "tags_all": {
              "CostCenter": "engineering",
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "microservices-platform-prod-vpc-default",
              "Owner": "devops-team",
              "Project": "microservices-platform"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-0512827eff5283536"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:779066052352:security-group/sg-00b2aa0c4dad8ce07",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-00b2aa0c4dad8ce07",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "779066052352",
            "revoke_rules_on_delete": false,
            "tags": {
              "CostCenter": "engineering",
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "microservices-platform-prod-vpc-default",
              "Owner": "devops-team",
              "Project": "microservices-platform"
            },
            "tags_all": {
              "CostCenter": "engineering",
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "microservices-platform-prod-vpc-default",
              "Owner": "devops-team",
              "Project": "microservices-platform"
            },
            "vpc_id": "vpc-0512827eff5283536"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_egress_only_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-098e9c9c48595896d",
            "arn": "arn:aws:ec2:us-west-2:779066052352:elastic-ip/eipalloc-098e9c9c48595896d",
            "association_id": "eipassoc-016d9d3a97203645c",
            "domain": "vpc",
            "id": "eipalloc-098e9c9c48595896d",
            "network_border_group": "us-west-2",
            "network_interface": "eni-0153761dcb2be1545",
            "private_dns": "ip-10-0-101-217.us-west-2.compute.internal",
            "private_ip": "10.0.101.217",
            "public_dns": "ec2-54-68-160-220.us-west-2.compute.amazonaws.com",
            "public_ip": "54.68.160.220",
            "public_ipv4_pool": "amazon",
            "tags": {
              "CostCenter": "engineering",
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "microservices-platform-prod-vpc-us-west-2a",
              "Owner": "devops-team",
              "Project": "microservices-platform"
            },
            "tags_all": {
              "CostCenter": "engineering",
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "microservices-platform-prod-vpc-us-west-2a",
              "Owner": "devops-team",
              "Project": "microservices-platform"
            },
            "vpc": true
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0b84c8f4cf3e95a6b",
            "arn": "arn:aws:ec2:us-west-2:779066052352:elastic-ip/eipalloc-0b84c8f4cf3e95a6b",
            "association_id": "eipassoc-0451f1eedfc31907c",
            "domain": "vpc",
            "id": "eipalloc-0b84c8f4cf3e95a6b",
            "network_border_group": "us-west-2",
            "network_interface": "eni-0bdfa43be68e852bc",
            "private_dns": "ip-10-0-102-30.us-west-2.compute.internal",
            "private_ip": "10.0.102.30",
            "public_dns": "ec2-44-230-128-10.us-west-2.compute.amazonaws.com",
            "public_ip": "44.230.128.10",
            "public_ipv4_pool": "amazon",
            "tags": {
              "CostCenter": "engineering",
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "microservices-platform-prod-vpc-us-west-2b",
              "Owner": "devops-team",
              "Project": "microservices-platform"
            },
            "tags_all": {
              "CostCenter": "engineering",
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "microservices-platform-prod-vpc-us-west-2b",
              "Owner": "devops-team",
              "Project": "microservices-platform"
            },
            "vpc": true
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0544c39224df0d521",
            "arn": "arn:aws:ec2:us-west-2:779066052352:elastic-ip/eipalloc-0544c39224df0d521",
            "association_id": "eipassoc-084e21715b6a61549",
            "domain": "vpc",
            "id": "eipalloc-0544c39224df0d521",
            "network_border_group": "us-west-2",
            "network_interface": "eni-0e6773a76afb437a1",
            "private_dns": "ip-10-0-103-9.us-west-2.compute.internal",
            "private_ip": "10.0.103.9",
            "public_dns": "ec2-52-40-237-62.us-west-2.compute.amazonaws.com",
            "public_ip": "52.40.237.62",
            "public_ipv4_pool": "amazon",
            "tags": {
              "CostCenter": "engineering",
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "microservices-platform-prod-vpc-us-west-2c",
              "Owner": "devops-team",
              "Project": "microservices-platform"
            },
            "tags_all": {
              "CostCenter": "engineering",
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "microservices-platform-prod-vpc-us-west-2c",
              "Owner": "devops-team",
              "Project": "microservices-platform"
            },
            "vpc": true
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:779066052352:internet-gateway/igw-04baa14a6f872c1f3",
            "id": "igw-04baa14a6f872c1f3",
            "owner_id": "779066052352",
            "tags": {
              "CostCenter": "engineering",
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "microservices-platform-prod-vpc",
              "Owner": "devops-team",
              "Project": "microservices-platform"
            },
            "tags_all": {
              "CostCenter": "engineering",
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "microservices-platform-prod-vpc",
              "Owner": "devops-team",
              "Project": "microservices-platform"
            },
            "vpc_id": "vpc-0512827eff5283536"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-098e9c9c48595896d",
            "association_id": "eipassoc-016d9d3a97203645c",
            "connectivity_type": "public",
            "id": "nat-0f71cff73ff122918",
            "network_interface_id": "eni-0153761dcb2be1545",
            "private_ip": "10.0.101.217",
            "public_ip": "54.68.160.220",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0669213a6401babfe",
            "tags": {
              "CostCenter": "engineering",
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "microservices-platform-prod-vpc-us-west-2a",
              "Owner": "devops-team",
              "Project": "microservices-platform"
            },
            "tags_all": {
              "CostCenter": "engineering",
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "microservices-platform-prod-vpc-us-west-2a",
              "Owner": "devops-team",
              "Project": "microservices-platform"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0b84c8f4cf3e95a6b",
            "association_id": "eipassoc-0451f1eedfc31907c",
            "connectivity_type": "public",
            "id": "nat-08d5e1b986e4e5ff8",
            "network_interface_id": "eni-0bdfa43be68e852bc",
            "private_ip": "10.0.102.30",
            "public_ip": "44.230.128.10",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0d6bdc16846343c96",
            "tags": {
              "CostCenter": "engineering",
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "microservices-platform-prod-vpc-us-west-2b",
              "Owner": "devops-team",
              "Project": "microservices-platform"
            },
            "tags_all": {
              "CostCenter": "engineering",
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "microservices-platform-prod-vpc-us-west-2b",
              "Owner": "devops-team",
              "Project": "microservices-platform"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0544c39224df0d521",
            "association_id": "eipassoc-084e21715b6a61549",
            "connectivity_type": "public",
            "id": "nat-05e5f9a9fcb55f485",
            "network_interface_id": "eni-0e6773a76afb437a1",
            "private_ip": "10.0.103.9",
            "public_ip": "52.40.237.62",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-05fdc5136a74f0743",
            "tags": {
              "CostCenter": "engineering",
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "microservices-platform-prod-vpc-us-west-2c",
              "Owner": "devops-team",
              "Project": "microservices-platform"
            },
            "tags_all": {
              "CostCenter": "engineering",
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "microservices-platform-prod-vpc-us-west-2c",
              "Owner": "devops-team",
              "Project": "microservices-platform"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "elasticache",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "intra",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "outpost",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "redshift",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "database_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "database_outbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "elasticache_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "elasticache_outbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "intra_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "intra_outbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "outpost_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "outpost_outbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "private_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "private_outbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "public_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "public_outbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "redshift_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "redshift_outbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "database_dns64_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "database_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "database_ipv6_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "database_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_dns64_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_ipv6_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-095c93c40d0d643241080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0f71cff73ff122918",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-095c93c40d0d64324",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-07b25782f8a39589b1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-08d5e1b986e4e5ff8",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-07b25782f8a39589b",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-005c512a61f30f6a01080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-05e5f9a9fcb55f485",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-005c512a61f30f6a0",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-04baa14a6f872c1f3",
            "id": "r-rtb-022334a75fa8bb13d1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-022334a75fa8bb13d",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway_ipv6",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "elasticache",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "intra",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:779066052352:route-table/rtb-095c93c40d0d64324",
            "id": "rtb-095c93c40d0d64324",
            "owner_id": "779066052352",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0f71cff73ff122918",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "CostCenter": "engineering",
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "microservices-platform-prod-vpc-private-us-west-2a",
              "Owner": "devops-team",
              "Project": "microservices-platform"
            },
            "tags_all": {
              "CostCenter": "engineering",
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "microservices-platform-prod-vpc-private-us-west-2a",
              "Owner": "devops-team",
              "Project": "microservices-platform"
            },
            "timeouts": null,
            "vpc_id": "vpc-0512827eff5283536"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:779066052352:route-table/rtb-07b25782f8a39589b",
            "id": "rtb-07b25782f8a39589b",
            "owner_id": "779066052352",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-08d5e1b986e4e5ff8",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "CostCenter": "engineering",
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "microservices-platform-prod-vpc-private-us-west-2b",
              "Owner": "devops-team",
              "Project": "microservices-platform"
            },
            "tags_all": {
              "CostCenter": "engineering",
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "microservices-platform-prod-vpc-private-us-west-2b",
              "Owner": "devops-team",
              "Project": "microservices-platform"
            },
            "timeouts": null,
            "vpc_id": "vpc-0512827eff5283536"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:779066052352:route-table/rtb-005c512a61f30f6a0",
            "id": "rtb-005c512a61f30f6a0",
            "owner_id": "779066052352",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-05e5f9a9fcb55f485",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "CostCenter": "engineering",
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "microservices-platform-prod-vpc-private-us-west-2c",
              "Owner": "devops-team",
              "Project": "microservices-platform"
            },
            "tags_all": {
              "CostCenter": "engineering",
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "microservices-platform-prod-vpc-private-us-west-2c",
              "Owner": "devops-team",
              "Project": "microservices-platform"
            },
            "timeouts": null,
            "vpc_id": "vpc-0512827eff5283536"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:779066052352:route-table/rtb-022334a75fa8bb13d",
            "id": "rtb-022334a75fa8bb13d",
            "owner_id": "779066052352",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-04baa14a6f872c1f3",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "CostCenter": "engineering",
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "microservices-platform-prod-vpc-public",
              "Owner": "devops-team",
              "Project": "microservices-platform"
            },
            "tags_all": {
              "CostCenter": "engineering",
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "microservices-platform-prod-vpc-public",
              "Owner": "devops-team",
              "Project": "microservices-platform"
            },
            "timeouts": null,
            "vpc_id": "vpc-0512827eff5283536"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "redshift",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f77a935a7950e031",
            "route_table_id": "rtb-095c93c40d0d64324",
            "subnet_id": "subnet-02002e8156286239c"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-003d979f00437d07d",
            "route_table_id": "rtb-07b25782f8a39589b",
            "subnet_id": "subnet-04017d7249bb65c77"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0edfcf2cec350c9f8",
            "route_table_id": "rtb-005c512a61f30f6a0",
            "subnet_id": "subnet-02e0492fa12b8f069"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "elasticache",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "intra",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "outpost",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04db470c568c3e57a",
            "route_table_id": "rtb-095c93c40d0d64324",
            "subnet_id": "subnet-0f671f2cc96bfbb54"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e3ce731ee283bb62",
            "route_table_id": "rtb-07b25782f8a39589b",
            "subnet_id": "subnet-057dd2b1cbad43636"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c448dbd8f8e7b47f",
            "route_table_id": "rtb-005c512a61f30f6a0",
            "subnet_id": "subnet-088ac01412c3a88dc"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0888e61dc12cf2fb1",
            "route_table_id": "rtb-022334a75fa8bb13d",
            "subnet_id": "subnet-0669213a6401babfe"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ddf4f16db5a95a4d",
            "route_table_id": "rtb-022334a75fa8bb13d",
            "subnet_id": "subnet-0d6bdc16846343c96"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b2b6b6d5066b6940",
            "route_table_id": "rtb-022334a75fa8bb13d",
            "subnet_id": "subnet-05fdc5136a74f0743"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "redshift",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "redshift_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:779066052352:subnet/subnet-02002e8156286239c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.201.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02002e8156286239c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "779066052352",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "CostCenter": "engineering",
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "microservices-platform-prod-vpc-db-us-west-2a",
              "Owner": "devops-team",
              "Project": "microservices-platform"
            },
            "tags_all": {
              "CostCenter": "engineering",
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "microservices-platform-prod-vpc-db-us-west-2a",
              "Owner": "devops-team",
              "Project": "microservices-platform"
            },
            "vpc_id": "vpc-0512827eff5283536"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:779066052352:subnet/subnet-04017d7249bb65c77",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.202.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04017d7249bb65c77",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "779066052352",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "CostCenter": "engineering",
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "microservices-platform-prod-vpc-db-us-west-2b",
              "Owner": "devops-team",
              "Project": "microservices-platform"
            },
            "tags_all": {
              "CostCenter": "engineering",
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "microservices-platform-prod-vpc-db-us-west-2b",
              "Owner": "devops-team",
              "Project": "microservices-platform"
            },
            "vpc_id": "vpc-0512827eff5283536"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:779066052352:subnet/subnet-02e0492fa12b8f069",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2c",
            "availability_zone_id": "usw2-az3",
            "cidr_block": "10.0.203.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02e0492fa12b8f069",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "779066052352",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "CostCenter": "engineering",
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "microservices-platform-prod-vpc-db-us-west-2c",
              "Owner": "devops-team",
              "Project": "microservices-platform"
            },
            "tags_all": {
              "CostCenter": "engineering",
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "microservices-platform-prod-vpc-db-us-west-2c",
              "Owner": "devops-team",
              "Project": "microservices-platform"
            },
            "vpc_id": "vpc-0512827eff5283536"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "elasticache",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "intra",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "outpost",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:779066052352:subnet/subnet-0f671f2cc96bfbb54",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f671f2cc96bfbb54",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "779066052352",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "CostCenter": "engineering",
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "microservices-platform-prod-vpc-private-us-west-2a",
              "Owner": "devops-team",
              "Project": "microservices-platform",
              "kubernetes.io/cluster/microservices-platform-prod": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "CostCenter": "engineering",
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "microservices-platform-prod-vpc-private-us-west-2a",
              "Owner": "devops-team",
              "Project": "microservices-platform",
              "kubernetes.io/cluster/microservices-platform-prod": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0512827eff5283536"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:779066052352:subnet/subnet-057dd2b1cbad43636",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-057dd2b1cbad43636",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "779066052352",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "CostCenter": "engineering",
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "microservices-platform-prod-vpc-private-us-west-2b",
              "Owner": "devops-team",
              "Project": "microservices-platform",
              "kubernetes.io/cluster/microservices-platform-prod": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "CostCenter": "engineering",
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "microservices-platform-prod-vpc-private-us-west-2b",
              "Owner": "devops-team",
              "Project": "microservices-platform",
              "kubernetes.io/cluster/microservices-platform-prod": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0512827eff5283536"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:779066052352:subnet/subnet-088ac01412c3a88dc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2c",
            "availability_zone_id": "usw2-az3",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-088ac01412c3a88dc",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "779066052352",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "CostCenter": "engineering",
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "microservices-platform-prod-vpc-private-us-west-2c",
              "Owner": "devops-team",
              "Project": "microservices-platform",
              "kubernetes.io/cluster/microservices-platform-prod": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "CostCenter": "engineering",
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "microservices-platform-prod-vpc-private-us-west-2c",
              "Owner": "devops-team",
              "Project": "microservices-platform",
              "kubernetes.io/cluster/microservices-platform-prod": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0512827eff5283536"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:779066052352:subnet/subnet-0669213a6401babfe",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.101.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0669213a6401babfe",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "779066052352",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "CostCenter": "engineering",
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "microservices-platform-prod-vpc-public-us-west-2a",
              "Owner": "devops-team",
              "Project": "microservices-platform",
              "kubernetes.io/cluster/microservices-platform-prod": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "CostCenter": "engineering",
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "microservices-platform-prod-vpc-public-us-west-2a",
              "Owner": "devops-team",
              "Project": "microservices-platform",
              "kubernetes.io/cluster/microservices-platform-prod": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0512827eff5283536"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:779066052352:subnet/subnet-0d6bdc16846343c96",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.102.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d6bdc16846343c96",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "779066052352",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "CostCenter": "engineering",
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "microservices-platform-prod-vpc-public-us-west-2b",
              "Owner": "devops-team",
              "Project": "microservices-platform",
              "kubernetes.io/cluster/microservices-platform-prod": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "CostCenter": "engineering",
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "microservices-platform-prod-vpc-public-us-west-2b",
              "Owner": "devops-team",
              "Project": "microservices-platform",
              "kubernetes.io/cluster/microservices-platform-prod": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0512827eff5283536"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:779066052352:subnet/subnet-05fdc5136a74f0743",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2c",
            "availability_zone_id": "usw2-az3",
            "cidr_block": "10.0.103.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05fdc5136a74f0743",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "779066052352",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "CostCenter": "engineering",
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "microservices-platform-prod-vpc-public-us-west-2c",
              "Owner": "devops-team",
              "Project": "microservices-platform",
              "kubernetes.io/cluster/microservices-platform-prod": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "CostCenter": "engineering",
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "microservices-platform-prod-vpc-public-us-west-2c",
              "Owner": "devops-team",
              "Project": "microservices-platform",
              "kubernetes.io/cluster/microservices-platform-prod": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0512827eff5283536"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "redshift",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:779066052352:vpc/vpc-0512827eff5283536",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-03a4d3c889ebdcf0a",
            "default_route_table_id": "rtb-084c472c92b699f8d",
            "default_security_group_id": "sg-00b2aa0c4dad8ce07",
            "dhcp_options_id": "dopt-05cca3e302ef4cfb7",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0512827eff5283536",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-084c472c92b699f8d",
            "owner_id": "779066052352",
            "tags": {
              "CostCenter": "engineering",
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "microservices-platform-prod-vpc",
              "Owner": "devops-team",
              "Project": "microservices-platform"
            },
            "tags_all": {
              "CostCenter": "engineering",
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "microservices-platform-prod-vpc",
              "Owner": "devops-team",
              "Project": "microservices-platform"
            }
          },
          "identity_schema_version": 0,
          "create_before_destroy": true
        }
      ]
    }
  ]
}